[project]
name = "selfies-generator"
version = "0.1.0"
description = "SELFIES-based generative RNN for molecule de novo design"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.15",
    "selfies>=2.1",
    "rdkit>=2023.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "progressbar2>=4.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
analysis = [
    "FCD",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
